<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.HayaKawere.view.activities.CreateCompteActivity"
    tools:visibility="visible"
    android:background="@color/white">


    <TextView
        android:id="@+id/create"
        android:layout_centerHorizontal="true"
        android:paddingRight="60dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/create"
        android:textColor="@color/black"
        android:textSize="20dp" />

   <EditText
        android:id="@+id/ed_nom_activity_create"
        android:layout_below="@id/create"
        android:layout_width="270dp"
        android:layout_height="@dimen/height"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:background="@drawable/rounded_edittext"
        android:fontFamily="@font/poppins_extralight"
        android:inputType="textEmailAddress"
        android:paddingLeft="15dp"
        android:textColor="@color/black"
        android:textColorHint="@color/gris_aghma9"
        android:hint="@string/fullnamehint"/>
    <TextView
        android:id="@+id/tv_msg_nom_create_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ed_nom_activity_create"
        android:textSize="10dp"
        android:layout_marginLeft="6dp"
        android:layout_alignLeft="@id/ed_email_activity_create"
        android:text="@string/nom_invalide"
        android:textColor="@color/red"
        android:visibility="invisible"
        />

    <EditText
        android:id="@+id/ed_prenomn_activity_create"
        android:layout_below="@id/ed_nom_activity_create"
        android:layout_width="270dp"
        android:layout_height="@dimen/height"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:background="@drawable/rounded_edittext"
        android:fontFamily="@font/poppins_extralight"
        android:inputType="textEmailAddress"
        android:paddingLeft="15dp"
        android:textColor="@color/black"
        android:textColorHint="@color/gris_aghma9"
        android:hint="@string/fullnamehint"/>
    <TextView
        android:id="@+id/tv_msg_prenom_create_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ed_prenomn_activity_create"
        android:paddingLeft="4dp"
        android:layout_alignLeft="@id/ed_email_activity_create"
        android:text="@string/prenom_invalide"
        android:textColor="@color/red"
        android:visibility="invisible"
        android:textSize="10dp"
        android:layout_marginLeft="6dp"
        />




    <EditText
        android:id="@+id/ed_email_activity_create"
        android:layout_below="@id/ed_prenomn_activity_create"
        android:layout_width="270dp"
        android:layout_height="@dimen/height"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:background="@drawable/rounded_edittext"
        android:fontFamily="@font/poppins_extralight"
        android:inputType="textEmailAddress"
        android:paddingLeft="15dp"
        android:textColor="@color/black"
        android:textColorHint="@color/gris_aghma9"
        android:hint="@string/emailhint"/>
    <TextView
        android:id="@+id/tv_msg_email_create_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ed_email_activity_create"
        android:layout_alignLeft="@id/ed_email_activity_create"
        android:paddingLeft="4dp"
        android:text="@string/email_invalide"
        android:textColor="@color/red"
        android:visibility="invisible"
        android:textSize="10dp"
        android:layout_marginLeft="6dp"
       />
    <EditText
        android:id="@+id/ed_mot_de_passe_create_activity"
        android:layout_below="@id/ed_email_activity_create"
        android:layout_width="270dp"
        android:layout_height="@dimen/height"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:background="@drawable/rounded_edittext"
        android:fontFamily="@font/poppins_extralight"
        android:inputType="textPassword"
        android:paddingLeft="15dp"
        android:textColor="@color/black"
        android:hint="@string/mdphint"
        android:textColorHint="@color/gris_aghma9"

         />
    <TextView
        android:id="@+id/tv_msg_mot_de_passe_create_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ed_mot_de_passe_create_activity"
        android:paddingLeft="4dp"
        android:layout_alignLeft="@id/ed_email_activity_create"
        android:text="@string/mot_de_passe_invalide"
        android:textColor="@color/red"
        android:visibility="invisible"
        android:textSize="10dp"
        android:layout_marginLeft="6dp"
        />
    <EditText
        android:id="@+id/ed_repeter_mot_de_passe_create_activity"
        android:layout_below="@id/ed_mot_de_passe_create_activity"
        android:layout_width="270dp"
        android:layout_height="@dimen/height"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:background="@drawable/rounded_edittext"
        android:fontFamily="@font/poppins_extralight"
        android:paddingLeft="15dp"
        android:textColor="@color/black"
        android:hint="@string/remdphint"
        android:inputType="textPassword"
        android:textColorHint="@color/gris_aghma9" />
    <TextView
        android:id="@+id/tv_msg_repeter_mot_de_passe_create_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ed_repeter_mot_de_passe_create_activity"
        android:paddingLeft="4dp"
        android:layout_alignLeft="@id/ed_email_activity_create"
        android:text="@string/repeter_mot_de_passe_invalide"
        android:textColor="@color/red"
        android:visibility="invisible"
        android:textSize="10dp"
        android:layout_marginLeft="6dp"
        />

    <Button
        android:id="@+id/bt_inscription_create_activity"
        android:layout_width="271dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/ed_repeter_mot_de_passe_create_activity"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/inscription"
        android:textColor="@color/white"
        android:background="@drawable/rounded_button"
        android:enabled="false"
        android:textAllCaps="false"

        />





</RelativeLayout>