<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:layout_centerVertical="true"
    tools:context="com.example.HayaKawere.LoginActivity"
    tools:visibility="visible">


        <!--        tv_email_activity_login-->
        <TextView
            android:id="@+id/Email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="270dp"
            android:layout_height="@dimen/height"
            android:layout_below="@id/Email"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_edittext"
            android:fontFamily="@font/poppins_extralight"
            android:hint="@string/Hintemail"
            android:inputType="textEmailAddress"
            android:paddingLeft="15dp"
            android:textColor="@color/black"
            android:maxLength="25"
            android:textColorHint="@color/gris_aghma9" />

        <TextView

            android:id="@+id/Mot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextTextEmailAddress"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="60dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/Mot_de_passe"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <RelativeLayout
            android:id="@+id/rl_password_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/Mot"
            android:layout_marginTop="25dp"

            android:layout_centerHorizontal="true">


                <EditText
                    android:id="@+id/editTextTextPassword"
                    android:layout_width="270dp"
                    android:layout_height="50dp"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/rounded_edittext"
                    android:inputType="textPassword"
                    android:maxLength="20"
                    android:paddingLeft="15dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"></EditText>

                <ImageView
                    android:id="@+id/iv_show_password_login_activity"
                    android:layout_width="35dp"
                    android:layout_height="45dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="-40dp"
                    android:layout_toRightOf="@id/editTextTextPassword"
                    android:src="@drawable/show_hide_password" />
        </RelativeLayout>


        <Button
            android:id="@+id/ConnexionLoginB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rl_password_login"
            android:layout_alignLeft="@id/rl_password_login"
            android:layout_alignRight="@id/rl_password_login"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:background="@drawable/rounded_button"
            android:fontFamily="@font/poppins_semibold"
            android:textAllCaps="false"
            android:onClick="passer"
            android:text="@string/connexion"
            android:textColor="@color/white"

            />


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="6dp"
            android:layout_below="@+id/ConnexionLoginB"
            android:layout_alignLeft="@id/rl_password_login"
            android:layout_alignRight="@id/rl_password_login"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:src="@drawable/line_login" />

        <com.facebook.login.widget.LoginButton

            android:id="@+id/login_button"
            android:layout_width="263dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/ConnexionLoginB"
            android:layout_alignLeft="@id/ConnexionLoginB"
            android:layout_alignRight="@id/ConnexionLoginB"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="35dp"
            android:layout_marginRight="3dp"
            android:layout_marginBottom="23dp"
            android:background="@color/white"
            android:drawableTint="@color/com_facebook_blue"
            android:elevation="2dp"

            android:maxHeight="500dp"
            android:paddingVertical="40dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:shadowColor="@color/gris_aghma9"
            android:textColor="@color/black" />

        <RelativeLayout
            android:id="@+id/bt_google_activity_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_button"
            android:layout_alignLeft="@id/rl_password_login"
            android:layout_alignRight="@id/rl_password_login"

            >

                <com.google.android.gms.common.SignInButton
                    android:id="@+id/google_login_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:visibility="gone" />
        <Button
            android:id="@+id/new_googlebtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:text="@string/ContinuerAvecGoogle"
            android:textSize="14dp"
            android:textColor="@color/black"
            android:drawableLeft="@drawable/googleg_standard_color_18"
            android:textAllCaps="false"
             />
</RelativeLayout>
        <TextView
            android:id="@+id/tv_noncompte_activity_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/bt_google_activity_login"
            android:textAllCaps="false"
            android:text="@string/non_compte"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_light"
            android:layout_marginTop="10dp"
            android:textSize="9dp"
            android:layout_alignLeft="@id/bt_google_activity_login"/>
        <TextView
            android:id="@+id/tv_inscription_activity_login"
            android:paddingLeft="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/tv_noncompte_activity_login"
            android:layout_marginTop="10dp"
            android:layout_below="@id/bt_google_activity_login"
            android:textColor="@color/vert_feteah"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/sing_up"
            android:textSize="9dp"
            android:onClick="loginToCreate"
            />


</RelativeLayout>

